--- a/blocks/pages.css
+++ b/blocks/pages.css
@@ -9,6 +9,9 @@
 }
 
 .page__content {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     font-family: Inter, Arial, sans-serif;
     color: #eee;
 }
