--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -26,6 +26,10 @@
 }
 
 .card__title {
+    max-width: 220px;
+    font-size: 24px;
+    font-weight: 900;
+    line-height: 29px;
     margin: 0;
     white-space: nowrap;
     text-overflow: ellipsis;
