--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,6 +1,6 @@
 .footer {
-    margin-bottom: 60px;
-    max-width: 318px;
+    margin: 67px auto 60px;
+    max-width: 880px;
     max-height: 18px;
 }
 
