--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,5 +1,5 @@
 .header {
-    margin-top: 45px;
+    margin: 45px auto 0;
     max-width: 880px;
     max-height: 74px;
     border-bottom: 1px solid rgba(84, 84, 84, 0.7);
