--- a/blocks/pages.css
+++ b/blocks/pages.css
@@ -9,9 +9,6 @@
 }
 
 .page__content {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
     font-family: Inter, Arial, sans-serif;
     color: #eee;
 }
@@ -19,4 +16,5 @@
 .page__section {
     max-width: 882px;
     width: 100%;
+    margin: 0 auto;
 }
