--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -30,6 +30,7 @@
     line-height: 48px;
     font-weight: 500;
     grid-area: title;
+    white-space: nowrap;
 }
 
 .profile__description {
@@ -55,21 +56,11 @@
     margin-left: auto;
 }
 
-@media screen and (max-width: 800px) {
-    .profile {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .profile__info {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        width: 100%;
-    }
-
-    .profile__description {
-        text-align: center;
-        width: 100%;
+@media screen and (max-width: 320px) {
+    .profile__add-button {
+        background: transparent url(../images/Add\ Button.svg) center no-repeat;
+        width: 150px;
+        height: 50px;
+        margin-left: auto 0;
     }
 }
