--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -57,10 +57,54 @@
 }
 
 @media screen and (max-width: 320px) {
+    .profile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+        padding-top: 40px;
+        max-width: 880px;
+        width: 100%;
+    }
+
+    .profile__info {
+        width: 282px;
+        height: 50px;
+        display: grid;
+        align-items: baseline;
+        text-align: center;
+        grid-template-areas: "title button" "description description";
+    }
+
+    .profile__title {
+        margin: 0;
+        font-size: 22px;
+        line-height: 48px;
+        font-weight: 500;
+        grid-area: title;
+        white-space: nowrap;
+    }
+
+    .profile__description {
+        margin: 0;
+        font-size: 18px;
+        line-height: 22px;
+        font-weight: 400;
+        grid-area: description;
+    }
+
+    .profile__edit-button {
+        margin-left: auto;
+        background: transparent url(../images/Edit\ Button.svg) center no-repeat;
+        width: 18px;
+        height: 18px;
+        grid-area: button;
+    }
+
     .profile__add-button {
         background: transparent url(../images/Add\ Button.svg) center no-repeat;
-        width: 150px;
+        width: 282px;
         height: 50px;
-        margin-left: auto 0;
+        margin: 0;
     }
 }
