fix description margin

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -10,3 +10,12 @@
     max-height: 33px;
     padding-bottom: 42px;
 }
+
+.header__image:hover {
+}
+
+@media screen and (max-width: 620px) {
+    .header__image {
+        margin-left: 27px;
+    }
+}
