--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -21,14 +21,14 @@
 .card__image {
     width: 282px;
     height: 282px;
-    border-radius: 10px;
+    border-radius: 10px 10px 0 0;
 }
 
 .card__title {
     max-width: 220px;
     font-size: 24px;
     font-weight: 900;
-    line-height: 29px;
+    line-height: 1.21;
     margin: 0;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -51,11 +51,15 @@
 }
 
 .card__like-button {
-    background: transparent url(../images/Group.svg) center no-repeat;
-    width: 21px;
+    background: transparent url(../images/CardLikeButton.svg) center no-repeat;
+    max-width: 21px;
+    width: 100%;
     height: 18px;
+    border: none;
 }
 
 .card__like-button:hover {
-    background: transparent url();
+    background: transparent url(../images/LikeButtonHover.svg) center no-repeat;
+    opacity: 0.5;
+    cursor: pointer;
 }
