--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -26,7 +26,25 @@
         font-size: 18px;
         font-weight: 400;
         line-height: 21.78px;
-        text-align: left;
+        text-align: center;
+        white-space: nowrap;
+        color: #545454;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .footer {
+        margin: 67px auto 60px;
+        max-width: 282px;
+        max-height: 18px;
+    }
+
+    .footer__copyright {
+        font-family: Inter, Arial, sans-serif;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 21.78px;
+        text-align: center;
         white-space: nowrap;
         color: #545454;
     }
