--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -17,8 +17,12 @@
 }
 
 .profile__info {
-    width: 415px;
+    max-width: 415px;
+    width: 100%;
     display: grid;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
     align-items: baseline;
     grid-template-areas: "title button" "description description";
 }
@@ -26,7 +30,7 @@
 .profile__title {
     margin: 0;
     font-size: 42px;
-    line-height: 48px;
+    line-height: 1.14;
     font-weight: 500;
     grid-area: title;
     white-space: nowrap;
@@ -35,7 +39,7 @@
 .profile__description {
     margin: 0;
     font-size: 18px;
-    line-height: 22px;
+    line-height: 1.2;
     font-weight: 400;
     grid-area: description;
 }
@@ -49,18 +53,24 @@
     grid-area: button;
 }
 .profile__edit-button:hover {
-    background: transparent (url(../images/EditButtonHover.png));
+    background: transparent url(../images/EditButtonHover.png) center no-repeat;
+    border: 1px solid rgba(255, 255, 255, 0.6);
+    cursor: pointer;
 }
 
 .profile__add-button {
     background: transparent url(../images/Add\ Button.svg) center no-repeat;
-    width: 150px;
+    max-width: 150px;
+    width: 100%;
     height: 50px;
     margin-left: auto;
     border: 2px solid #fff;
 }
 
 .profile__add-button:hover {
+    background: transparent url(../images/AddButtonHover.png) center no-repeat;
+    border: 2px solid rgba(255, 255, 255, 0.6);
+    cursor: pointer;
 }
 
 @media screen and (max-width: 620px) {
@@ -123,12 +133,23 @@
     }
 
     .profile__add-button {
-        background: transparent url(../images/AddButtonVector.png) center
-            no-repeat;
-        width: 282px;
+        background: transparent url(../images/AddButton320.png) center no-repeat;
+        max-width: 282px;
+        width: 100%;
         height: 50px;
         margin: 0;
         border: 2px solid #fff;
         color: #fff;
+    }
+}
+
+@media screen and (max-width: 775px) {
+    .profile {
+        display: flex;
+        align-items: center;
+        position: relative;
+        padding-top: 40px;
+        max-width: 880px;
+        width: 100%;
     }
 }
