--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,5 @@
-@import url("../vendor.css/normalize.css");
-@import url("../vendor.css/fonts.css");
+@import url("../vendor/normalize.css");
+@import url("../vendor/fonts.css");
 @import url("../blocks/pages.css");
 @import url("../blocks/header.css");
 @import url("../blocks/content.css");
