--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -2,64 +2,12 @@
     max-width: 880px;
 }
 
-.card__list {
+.cards__list {
     padding: 0;
-    margin-top: 52px;
+    margin: 52px 0 0;
     display: grid;
     justify-content: center;
     grid-template-columns: repeat(auto-fit, 282px);
     grid-column-gap: 17px;
     grid-row-gap: 20px;
-}
-
-.card {
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-}
-
-.card__image {
-    width: 282px;
-    height: 282px;
-    border-radius: 10px 10px 0 0;
-}
-
-.card__title {
-    max-width: 220px;
-    font-size: 24px;
-    font-weight: 900;
-    line-height: 1.21;
-    margin: 0;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
-
-.card__description {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #eee;
-    color: black;
-    padding-top: 25px;
-    padding-right: 20px;
-    padding-left: 20px;
-    padding-bottom: 25px;
-    border-radius: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-}
-
-.card__like-button {
-    background: transparent url(../images/CardLikeButton.svg) center no-repeat;
-    max-width: 21px;
-    width: 100%;
-    height: 18px;
-    border: none;
-}
-
-.card__like-button:hover {
-    background: transparent url(../images/LikeButtonHover.svg) center no-repeat;
-    opacity: 0.5;
-    cursor: pointer;
 }
