--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -20,9 +20,6 @@
     max-width: 415px;
     width: 100%;
     display: grid;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
     align-items: baseline;
     grid-template-areas: "title button" "description description";
 }
@@ -33,7 +30,6 @@
     line-height: 1.14;
     font-weight: 500;
     grid-area: title;
-    white-space: nowrap;
 }
 
 .profile__description {
@@ -53,8 +49,7 @@
     grid-area: button;
 }
 .profile__edit-button:hover {
-    background: transparent url(../images/EditButtonHover.png) center no-repeat;
-    border: 1px solid rgba(255, 255, 255, 0.6);
+    opacity: 0.6;
     cursor: pointer;
 }
 
@@ -65,23 +60,17 @@
     height: 50px;
     margin-left: auto;
     border: 2px solid #fff;
+    border-radius: 2px;
 }
 
 .profile__add-button:hover {
-    background: transparent url(../images/AddButtonHover.png) center no-repeat;
-    border: 2px solid rgba(255, 255, 255, 0.6);
+    opacity: 0.6;
     cursor: pointer;
 }
 
 @media screen and (max-width: 620px) {
     .profile {
-        display: flex;
         flex-direction: column;
-        align-items: center;
-        position: relative;
-        padding-top: 40px;
-        max-width: 880px;
-        width: 100%;
     }
 
     .profile__info {
@@ -93,11 +82,6 @@
         grid-template-areas: "title button" "description description";
     }
     .profile__image {
-        border-radius: 50%;
-        width: 120px;
-        height: 120px;
-        object-fit: cover;
-        background-position: center;
         margin: 0;
     }
 
@@ -109,7 +93,6 @@
         line-height: 26.63px;
         font-weight: 500;
         grid-area: title;
-        white-space: nowrap;
     }
 
     .profile__description {
@@ -135,21 +118,6 @@
     .profile__add-button {
         background: transparent url(../images/AddButton320.png) center no-repeat;
         max-width: 282px;
-        width: 100%;
-        height: 50px;
         margin: 0;
-        border: 2px solid #fff;
-        color: #fff;
-    }
-}
-
-@media screen and (max-width: 775px) {
-    .profile {
-        display: flex;
-        align-items: center;
-        position: relative;
-        padding-top: 40px;
-        max-width: 880px;
-        width: 100%;
     }
 }
