--- a/blocks/header.css
+++ b/blocks/header.css
@@ -9,6 +9,12 @@
     padding-bottom: 42px;
 }
 
+@media screen and (max-width: 768px) {
+    .header__image {
+        padding-left: 25px;
+    }
+}
+
 @media screen and (max-width: 680px) {
     .header {
         max-width: 320px;
@@ -18,6 +24,6 @@
         max-width: 126px;
         width: 100%;
         padding: 0;
-        margin: 28px 167px 32px 27px;
+        margin: 28px 0 32px 27px;
     }
 }
