--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -51,7 +51,7 @@
 }
 
 .profile__edit-button {
-    background: transparent url(../images/EditButtonVector.png) center no-repeat;
+    background: transparent url(../images/EditButton.svg) center no-repeat;
     width: 24px;
     height: 24px;
     border: 1px solid #fff;
@@ -63,7 +63,7 @@
 }
 
 .profile__add-button {
-    background: transparent url(../images/AddButtonVector.png) center no-repeat;
+    background: transparent url(../images/AddButton.svg) center no-repeat;
     max-width: 150px;
     width: 100%;
     height: 50px;
@@ -82,6 +82,10 @@
         box-sizing: border-box;
         padding-left: 20px;
         padding-right: 20px;
+    }
+
+    .profile__edit-button {
+        margin-right: 10px;
     }
 }
 
@@ -128,10 +132,11 @@
         background-size: 7.5px 7.5px;
         width: 18px;
         height: 18px;
+        margin: 0;
     }
 
     .profile__add-button {
-        background: transparent url(../images/AddButton320.png) center no-repeat;
+        background-size: 16px 16px;
         max-width: 282px;
         margin: 0;
     }
