--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -26,7 +26,7 @@
 
 .modal__heading {
     max-width: 330px;
-    font-family: Inter;
+    font-family: Inter, Arial, sans-serif;
     font-size: 24px;
     font-weight: 900;
     line-height: 29.05px;
@@ -43,7 +43,7 @@
 .modal__input {
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    font-family: Inter;
+    font-family: Inter, Arial, sans-serif;
     font-size: 14px;
     font-weight: 400;
     text-align: left;
@@ -60,12 +60,13 @@
     border-radius: 2px 0px 0px 0px;
     background-color: #000;
     color: #eee;
-    font-family: Inter;
+    font-family: Inter, Arial, sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 21.78px;
     text-align: center;
     margin-top: 48px;
+    border: none;
 }
 
 .modal__close {
