--- a/blocks/card.css
+++ b/blocks/card.css
@@ -21,6 +21,10 @@
     border-radius: 10px 10px 0 0;
 }
 
+.card__image:hover {
+    cursor: pointer;
+}
+
 .card__title {
     max-width: 220px;
     font-size: 24px;
