--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -87,6 +87,27 @@
     cursor: pointer;
 }
 
+.image__modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: none;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+.image__modal-container {
+    box-sizing: border-box;
+    background: transparent;
+    position: relative;
+    display: flex;
+}
+
+.image__modal-close {
+}
+
 @media screen and (max-width: 680px) {
     .modal__container {
         max-width: 282px;
