--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -93,8 +93,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    display: none;
-    background-color: rgba(0, 0, 0, 0.5);
+    background: transparent;
     z-index: 1;
 }
 
@@ -102,6 +101,7 @@
     max-width: 75vw;
     max-height: 75vh;
 }
+
 @media screen and (max-width: 680px) {
     .modal__container {
         max-width: 282px;
