--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -111,6 +111,16 @@
     font-weight: 400;
 }
 
+.modal__error {
+    font-size: 12px;
+    line-height: 15px;
+    color: #f00;
+    position: absolute;
+    top: calc(100% + 5px);
+    left: 0;
+    transition: opacity 0.3s;
+}
+
 @media screen and (max-width: 680px) {
     .modal__container {
         max-width: 282px;
