--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -41,7 +41,6 @@
 }
 
 .modal__form {
-    max-width: 358px;
     display: flex;
     flex-direction: column;
 }
@@ -61,8 +60,8 @@
 }
 
 .modal__button {
-    width: 358px;
-    height: 50.15px;
+    width: 100%;
+    padding: 13px;
     border-radius: 2px 0px 0px 0px;
     background-color: #000;
     color: #eee;
@@ -137,16 +136,10 @@
     }
 
     .modal__heading {
-        max-width: 238px;
         font-size: 18px;
     }
 
-    .modal__form {
-        max-width: 238px;
-    }
-
     .modal__button {
-        max-width: 238px;
         font-size: 14px;
     }
 }
