--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -12,6 +12,11 @@
     display: inline-block;
 }
 
+.profile__avatar-container {
+    position: relative;
+    display: inline-block;
+}
+
 .profile__image {
     border-radius: 50%;
     width: 120px;
@@ -22,17 +27,19 @@
 }
 
 .profile__image-edit {
-    width: 26px;
-    height: 26px;
+    width: 120px;
+    height: 120px;
     border: none;
     cursor: pointer;
     position: absolute;
-    background: transparent url(../images/EditIcon.svg) center center;
-    background-size: contain;
+    background: transparent url(../images/EditIcon.svg) center no-repeat;
+    background-size: 26px 26px;
+    background-color: rgba(0, 0, 0, 0.7);
     top: 40px;
     left: 36px;
     opacity: 0;
-    transform: translate(50%, 50%);
+    top: 0px;
+    left: 0px;
     transition: opacity 0.3s;
 }
 
